# kiki

./: .gitignore  README.md  __init__.py  __main__.py  kiki.py  license  pyproject.toml  requirements.txt  setup.cfg  setup.py
kiki/: __init__.py  __main__.py  kiki.py  kikiengine.py  kikiokno.py
kiki/slovniky/: dublety.txt  kontextovky.txt  notokboomer.txt  ptydepe.txt  typochyby.txt
slovniky/: notokboomer.txt  ptydepe.txt
